--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/buttonsLayout"
+        app:layout_constraintBottom_toTopOf="@id/buttonsNav"
         android:layout_width="0dp"
         android:layout_height="0dp">
 
 
     </fragment>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/buttonsNav"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/nav_menu"/>
+
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/buttonsLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
