--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,28 +7,15 @@
     <fragment
         android:id="@+id/notesFragment"
         android:name="com.example.starvingnotebook.NotesFragment"
-        android:label="NotesFragment" >
-        <action
-            android:id="@+id/action_notesFragment_to_setupFragment"
-            app:destination="@id/setupFragment" />
-    </fragment>
+        tools:layout=""
+        android:label="NotesFragment" />
     <fragment
         android:id="@+id/setupFragment"
         android:name="com.example.starvingnotebook.SetupFragment"
-        android:label="SetupFragment" >
-        <action
-            android:id="@+id/action_setupFragment_to_statisticsFragment2"
-            app:destination="@id/statisticsFragment2" />
-    </fragment>
+        android:label="SetupFragment" />
     <fragment
-        android:id="@+id/statisticsFragment2"
+        android:id="@+id/statisticsFragment"
         android:name="com.example.starvingnotebook.StatisticsFragment"
-        android:label="StatisticsFragment" >
-        <action
-            android:id="@+id/action_statisticsFragment2_to_notesFragment"
-            app:destination="@id/notesFragment" />
-        <action
-            android:id="@+id/action_statisticsFragment2_to_setupFragment"
-            app:destination="@id/setupFragment" />
-    </fragment>
+        android:label="StatisticsFragment" />
+
 </navigation>
