--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -13,10 +13,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/button2"/>
+        app:layout_constraintBottom_toTopOf="@id/button_notes_text"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_notes_text"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:layout_marginTop="450dp"
@@ -37,7 +37,7 @@
 
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/button_notes_text"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
