--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/layout"
         android:layout_width="200dp"
         android:layout_height="50dp"
@@ -23,8 +23,10 @@
         app:layout_constraintTop_toBottomOf="@id/calendarView"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:context=".MainActivity"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="374dp">
+        android:padding="10dp"
+        android:background="@color/primary_green_dark"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
 
     </LinearLayout>
