--- a/app/src/main/res/layout/notes_note.xml
+++ b/app/src/main/res/layout/notes_note.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toTopOf="@+id/soundView" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date: 02.02.0202"
@@ -75,12 +75,13 @@
     <ImageView
 
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-      android:background="@drawable/radio_crying_5"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="10dp"
+        android:background="@drawable/radio_frowning_4"
+
         app:layout_constraintEnd_toEndOf="parent"
-android:maxHeight="50dp"
-        android:maxWidth="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/textDate" />
 
     />
 
