--- a/app/src/main/res/layout/notes_note.xml
+++ b/app/src/main/res/layout/notes_note.xml
@@ -74,7 +74,7 @@
 
     <ImageView
 
-        android:id="@+id/imageView2"
+        android:id="@+id/reactionImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:padding="10dp"
