--- a/app/src/main/res/layout/notes_note.xml
+++ b/app/src/main/res/layout/notes_note.xml
@@ -4,15 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/secondary_orange_light"/>
 
     <TextView
         android:id="@+id/note_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
+
         android:paddingTop="20dp"
+        android:paddingLeft="20dp"
+        android:paddingBottom="20dp"
+        android:textColor="#0E0303"
+        android:paddingRight="50dp"
+
+        android:textSize="16dp"
         android:text="Text"
+        android:layout_marginStart="50dp"
+
+
         app:layout_constraintBottom_toTopOf="@id/soundView"
+        app:layout_constraintEnd_toStartOf="@id/textDate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,9 +93,11 @@
         android:id="@+id/reactionImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:padding="10dp"
+        android:layout_margin="10dp"
+
         android:background="@drawable/radio_frowning_4"
 
+        app:layout_constraintBottom_toTopOf="@+id/buttonSlider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textDate" />
 
