--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -44,6 +44,7 @@
         android:hint="Weight">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputSetupWeightUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
