--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -44,6 +44,7 @@
         android:hint="Weight">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:inputType="numberDecimal"
             android:id="@+id/inputSetupWeightUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,6 +62,8 @@
         android:hint="Height">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:inputType="numberDecimal"
+            android:id="@+id/inputSetupHeightUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
@@ -76,13 +79,13 @@
         app:layout_constraintTop_toBottomOf="@id/textSetupHeight" >
 
         <RadioButton
-            android:id="@+id/radioButton6"
+            android:id="@+id/radioMale"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Male" />
 
         <RadioButton
-            android:id="@+id/radioButton7"
+            android:id="@+id/radioFemale"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Female" />
