--- a/app/src/main/res/layout/notes_note.xml
+++ b/app/src/main/res/layout/notes_note.xml
@@ -39,8 +39,9 @@
         android:id="@+id/soundView"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginLeft="4dp"
 
+        android:layout_marginTop="52dp"
         android:paddingTop="20dp"
         android:valueFrom="0.0"
         android:valueTo="100.0"
