--- a/app/src/main/res/menu/notes_menu.xml
+++ b/app/src/main/res/menu/notes_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:title="Add a Note"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_add"
         android:id="@+id/generateNotesFragment"/>
 </menu>
