--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-        app:mcv_selectionMode="multiple"
+    <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
+        app:type="one_day_picker"
+        app:eventsEnabled="true"
+        app:headerColor="@color/primary_green_base"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.0"
@@ -15,19 +17,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/layout"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:orientation="vertical"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/calendarView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:context=".MainActivity"
-        android:padding="10dp"
-        android:background="@color/primary_green_dark"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
